# ShadowPickle

./: .gitignore  README.md  pypi_requirements.txt  pyproject.toml  requirements.txt
Example Attacks/: pytorch_safe_bypass.pkl  system_etcpasswd.pkl  test_bypass.pkl  xxsubtype_override.pkl
Results/: filter_names_injected.csv  injected_opcodes.csv
Results/Patched_results/: patched_scan_results_external.csv  patched_scan_results_overwritten_updated.csv
Results/RQ1/: benign_injected_opensource.csv  external_opensource_results_updated.csv  opensource_tools_results_pypi.csv  weights_bypass_opensource_results.csv  weights_bypass_ultimate_opensource_results.csv  weights_detected_to_not.csv
Results/RQ3/: scanning_directory_advanced_payloads.csv
Results/RQ4/: scanning_direct_Malhug_updated.csv  (+3 more)
payloads/: eat_pypasswd.pkl  exec_cmd_ls.pkl  exec_utils_whoami.pkl  execute_ls.pkl  execute_nc.pkl  ey_nc.pkl  gdo_nc.pkl  gptexec_whoami.pkl  invoke_complex_whoami.pkl  llm_tools_execute_shell_uname.pkl  llmexec_pty.pkl  molot_shrv.pkl  muss_eval.pkl  prcssr_curl.pkl  processrunner_nc.pkl  pxe_nc.pkl  raft_zshrv.pkl  runnow_etcpass.pkl  shell_cmd_complex_whoami.pkl  slutterprime_exec.pkl  sysexecute_ls.pkl
scripts/: bytecode_extractor.py  download_gcs.py  download_hf_models.py  external.py  fickle_insertion.py  fickling_safety.py  infinite_nc.sh  model_tracer_runner.py  obfuscated_generator.py  opensource_runner.py  patched_scanner_runner.py  payload_generator.py  pickle_maker.py  pytorch_injector.py  scan_directory.py  scan_result_analyzer.py  utils.py
(+63 files in other folders)
