 [project]
name = "benchmarking-hubs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fickling>=0.1.5",
    "google-cloud-storage>=3.6.0",
    "huggingface-hub>=1.1.6",
    "modelscan>=0.8.7",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "picklescan>=0.0.32",
    "psutil>=7.1.3",
    "requests>=2.32.5",
    "torch>=2.9.1",
    "stracepy @ git+https://github.com/bmwcarit/stracepy.git",
    "matplotlib>=3.10.8",
    "slutterprime>=1.0.0",
    "build>=1.4.0",
    "twine>=6.2.0",
    "pyarmor>=9.2.3",
]
